--- a/examples/index.html
+++ b/examples/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-  <script src="../js/vendor/jquery.min.js"></script>
-  <script src="../js/espada.js"></script>  
+  <script src="../vendor/jquery.min.js"></script>
+  <script src="../espada.es6.js"></script>  
   <script src="app/controllers.js"></script>
    
-  <view />  
+  <view></view>  
   
   <script src="app/app.js"></script>
 </body>
