--- a/examples/index.html
+++ b/examples/index.html
@@ -1,27 +1,57 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
 
-  <title>Project Espada</title>
-  <meta name="description" content="Project Espada Test">
-  <meta name="author" content="SitePoint">
+		<title>Project Espada</title>
+		<meta name="description" content="Project Espada Test">
+		<meta name="author" content="SitePoint">
 
-  <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+		<link rel="stylesheet" href="css/style.css">
 
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 
-<body>
-  <script src="../vendor/jquery.min.js"></script>
-  <script src="../espada.es6.js"></script>  
-  <script src="app/controllers.js"></script>
-   
-  <view></view>  
-  
-  <script src="app/app.js"></script>
-</body>
+		<!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
+
+		<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+	</head>
+
+	<body>
+		<script src="../vendor/jquery.min.js"></script>
+		<script src="../espada.es6.js"></script>
+		<script src="app/controllers.js"></script>
+
+		<div class="row">
+			<div class="col-md-12">
+				<nav class="navbar navbar-default">
+					<div class="container-fluid">
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar">&nbsp;</span>
+								<span class="icon-bar">&nbsp;</span>
+								<span class="icon-bar">&nbsp;</span>
+							</button>
+							<a class="navbar-brand" href="#">Example</a>
+						</div>
+						<div class="collapse navbar-collapse" id="main-nav">
+							<include file="includes/main_menu.html"></include>
+						</div>
+					</div>
+				</nav>
+			</div>
+		</div>
+
+		<view></view>
+
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="app/app.js"></script>
+	</body>
 </html>
