--- a/examples/index.html
+++ b/examples/index.html
@@ -25,30 +25,31 @@
 		<script src="../vendor/jquery.min.js"></script>
 		<script src="../espada.es6.js"></script>
 		<script src="app/controllers.js"></script>
-
-		<div class="row">
-			<div class="col-md-12">
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar">&nbsp;</span>
-								<span class="icon-bar">&nbsp;</span>
-								<span class="icon-bar">&nbsp;</span>
-							</button>
-							<a class="navbar-brand" href="#">Example</a>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-12">
+					<nav class="navbar navbar-default">
+						<div class="container-fluid">
+							<!-- Brand and toggle get grouped for better mobile display -->
+							<div class="navbar-header">
+								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav" aria-expanded="false">
+									<span class="sr-only">Toggle navigation</span>
+									<span class="icon-bar">&nbsp;</span>
+									<span class="icon-bar">&nbsp;</span>
+									<span class="icon-bar">&nbsp;</span>
+								</button>
+								<a class="navbar-brand" esref="/">Examples</a>
+							</div>
+							<div class="collapse navbar-collapse" id="main-nav">
+								<include file="includes/main_menu.html"></include>
+							</div>
 						</div>
-						<div class="collapse navbar-collapse" id="main-nav">
-							<include file="includes/main_menu.html"></include>
-						</div>
-					</div>
-				</nav>
+					</nav>
+				</div>
 			</div>
-		</div>
 
-		<view></view>
+			<view></view>
+		</div>
 
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
