--- a/es1.5/index.html
+++ b/es1.5/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Project Espada Test">
     <meta name="author" content="SitePoint">
 
-    <!--  <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -24,7 +24,8 @@
 
 <body>
     <script src="../vendor/jquery.min.js"></script>
-    <script src="../espada.es6.js"></script>
+    <script src="js/espada.es6.js"></script>
+    <script src="app/routes.js"></script>
     <script src="app/controllers.js"></script>
     <div class="container-fluid">
         <div class="row">
