Added the new RouteMap and the new Router

--- a/es1.5/index.html
+++ b/es1.5/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
@@ -24,9 +23,9 @@
 
 <body>
     <script src="../vendor/jquery.min.js"></script>
-    <script src="js/espada.es6.js"></script>
-    <script src="app/routes.js"></script>
+    <script src="js/espada.1.5.es6.js"></script>    
     <script src="app/controllers.js"></script>
+    <script src="app/routes.js"></script>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
